tenants docs update
