# priv/static/swagger.json
@@ -3,12 +3,94 @@
     "application/json"
   ],
   "definitions": {
+    "ExtensionPostgres": {
+      "properties": {
+        "inserted_at": {
+          "description": "",
+          "example": "2022-02-16T20:41:47",
+          "type": "string"
+        },
+        "settings": {
+          "description": "",
+          "properties": {
+            "db_host": {
+              "example": "some encrypted value",
+              "type": "string"
+            },
+            "db_name": {
+              "example": "some encrypted value",
+              "type": "string"
+            },
+            "db_password": {
+              "example": "some encrypted value",
+              "type": "string"
+            },
+            "db_port": {
+              "example": "some encrypted value",
+              "type": "string"
+            },
+            "db_user": {
+              "example": "some encrypted value",
+              "type": "string"
+            },
+            "poll_interval": {
+              "example": 100,
+              "type": "integer"
+            },
+            "poll_max_changes": {
+              "example": 100,
+              "type": "integer"
+            },
+            "poll_max_record_bytes": {
+              "example": 1048576,
+              "type": "integer"
+            },
+            "publication": {
+              "example": "supabase_multiplayer",
+              "type": "string"
+            },
+            "region": {
+              "example": "us-east-1",
+              "type": "string"
+            },
+            "slot_name": {
+              "example": "supabase_multiplayer_replication_slot",
+              "type": "string"
+            }
+          },
+          "type": "object"
+        },
+        "type": {
+          "description": "",
+          "example": "postgres",
+          "type": "string"
+        },
+        "updated_at": {
+          "description": "",
+          "example": "2022-02-16T20:41:47",
+          "type": "string"
+        }
+      },
+      "required": [
+        "settings",
+        "type"
+      ],
+      "title": "ExtensionPostgres",
+      "type": "object"
+    },
     "Tenant": {
       "properties": {
         "active": {
           "description": "",
           "example": true,
           "type": "boolean"
+        },
+        "extensions": {
+          "description": "",
+          "items": {
+            "$ref": "#/definitions/ExtensionPostgres"
+          },
+          "type": "array"
         },
         "external_id": {
           "description": "",
@@ -25,24 +107,19 @@
           "example": "2022-02-16T20:41:47",
           "type": "string"
         },
+        "max_concurrent_users": {
+          "description": "",
+          "example": 10000,
+          "type": "integer"
+        },
         "name": {
           "description": "",
           "example": "tenant1",
           "type": "string"
-        },
-        "region": {
-          "description": "",
-          "example": "ap-southeast-1",
-          "type": "string"
-        },
-        "rls_poll_interval": {
-          "description": "",
-          "example": 500,
-          "type": "integer"
         }
       },
       "required": [
-        "region"
+        "extensions"
       ],
       "title": "Tenant",
       "type": "object"
@@ -164,33 +241,6 @@
             "description": "Success",
             "schema": {
               "$ref": "#/definitions/TenantsResponse"
-            }
-          }
-        },
-        "summary": "",
-        "tags": [
-          "Tenants"
-        ]
-      },
-      "post": {
-        "description": "",
-        "operationId": "RealtimeWeb.TenantController.create",
-        "parameters": [
-          {
-            "description": "",
-            "in": "body",
-            "name": "tenant",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/TenantReq"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success",
-            "schema": {
-              "$ref": "#/definitions/TenantResponse"
             }
           }
         },
